[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib_dzne_seneca"
version = "0.1.0"
description = "Libary for using seneca."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Johannes", email = "johannes-programming@posteo.org" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"

